style.css
.background {
     background-color: rgb(248, 248, 248);
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
}
.game {
     border: none;
     width: 720px;
     height: 540px;
}
.name {
     text-align: left;
     margin: 20px;
     padding: 20px;
     font-family: 'Times New Roman', serif;
}
.center {
      max-width: 1080px;
      margin: 0 auto;
      padding: 20px;
      text-align: center;
    }
text {
      margin-left: 15px;
      margin-right: 15px;
body {
      background-color: #ff2025;
      margin: 0;
      padding: 0;
      font-family: 'Open Sans', sans-serif;
}

